fix layout on mobile

--- a/app/Components/Layout.less
+++ b/app/Components/Layout.less
@@ -41,6 +41,7 @@
     p {
       font-family: @font-family-text;
       color: @text-color-light;
+      text-align: justify;
     }
 
     small {
@@ -51,6 +52,9 @@
     h1, h2, h3, h4, h5, h6 {
       font-family: @font-family-text;
       color: @text-color-dark;
+    }
+    img {
+      max-width: 100%;
     }
   }
 
